##
## This file is part of the libsigrokdecode project.
##
## Copyright (C) 2010 Uwe Hermann <uwe@hermann-uwe.de>
##
## This program is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; either version 2 of the License, or
## (at your option) any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with this program; if not, write to the Free Software
## Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301 USA
##

# Please keep this list in alphabetical order.
SUBDIRS = \
	avr_isp \
	can \
	dcf77 \
	ds1307 \
	edid \
	i2c \
	i2cdemux \
	i2cfilter \
	i2s \
	jtag \
	jtag_stm32 \
	lm75 \
	lpc \
	maxim_ds28ea00 \
	mlx90614 \
	mx25lxx05d \
	mxc6225xu \
	nunchuk \
	onewire_link \
	onewire_network \
	pan1321 \
	rtc8564 \
	sdcard_spi \
	spi \
	tlc5620 \
	transitioncounter \
	uart \
	uart_dump \
	usb_protocol \
	usb_signalling

